--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"type": "git",
 		"url": "https://github.com/rodrigopg/vscode-extension-readable-indent.git"
 	},
-	"version": "2.2.1",
+	"version": "2.3.0",
 	"engines": {
 		"vscode": "^1.32.0"
 	},
@@ -171,16 +171,18 @@
 		"test": "npm run compile && node ./node_modules/vscode/bin/test",
 		"vscode:prepublish": "npm run compile",
 		"release": "standard-version && git push --follow-tags origin master && vsce publish",
+		"release-": "standard-version",
 		"watch": "tsc -watch -p ./"
 	},
 	"devDependencies": {
 		"@types/mocha": "^2.2.42",
-		"@types/node": "^10.17.20",
+		"@types/node": "^10.17.60",
 		"cz-conventional-changelog": "^2.1.0",
-		"standard-version": "^9.0.0",
+		"fs-access": "^2.0.0",
+		"standard-version": "^9.3.2",
 		"tslint": "^5.20.1",
-		"typescript": "^3.8.3",
-		"vscode": "^1.1.36"
+		"typescript": "^3.9.10",
+		"vscode": "^1.1.37"
 	},
 	"config": {
 		"commitizen": {
@@ -192,7 +194,7 @@
 	},
 	"dependencies": {
 		"copy-paste": "^1.3.0",
-		"npm": "^6.14.9",
+		"npm": "^6.14.15",
 		"sql-formatter-plus": "^1.3.6"
 	}
 }
